--- a/style.css
+++ b/style.css
@@ -659,7 +659,7 @@
   }
 
   .pt3 {
-    height: 100vh;
+    height: 110vh;
     padding-left: 20%;
     padding-right: 20%;
     background: rgb(250, 250, 250);
@@ -672,7 +672,7 @@
   }
 
   .pt3down {
-    /* padding-top: 20vh; */
+    padding-top: 5vh;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr;
@@ -685,8 +685,25 @@
     padding-bottom: 5vh;
   }
 
+  .pt3down h2 {
+    padding-top: 20px;
+  }
+  .proj1,
+  .proj2,
+  .proj3,
+  .proj4,
+  .proj5,
+  .proj6 {
+    display: flex;
+    /* height: 40vh; */
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    padding-bottom: 20px;
+    /* align-self: flex-end; */
+  }
   .pt4 {
-    height: 100vh;
+    height: 110vh;
     padding-left: 20%;
     padding-right: 20%;
     background: rgb(255, 255, 255);
@@ -705,9 +722,46 @@
     grid-template-areas:
       "proj1 proj2 proj3"
       "proj4 proj5 proj6";
-    height: 120vh;
+    height: 80vh;
     grid-row-gap: 20px;
     grid-column-gap: 20px;
     padding-bottom: 5vh;
   }
+}
+
+.pt4down .proj1,
+.proj2,
+.proj3,
+.proj4,
+.proj5,
+.proj6 {
+  display: flex;
+  /* height: 40vh; */
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+  padding-bottom: 20px;
+  /* align-self: flex-end; */
+}
+
+.pt4down h2 {
+  font-size: 18px;
+}
+
+.pt5 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 20vh;
+  padding-left: 20%;
+  padding-right: 20%;
+  background: rgb(53, 53, 53);
+}
+
+.pt5 h3 {
+  font-size: 18px;
+  color: rgb(255, 255, 255);
+  font-weight: lighter;
+  text-align: center;
+  /* padding-bottom: 20px; */
 }
